// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Image/demo/basic.md correctly 1`] = `
<div>
  <img
    alt="lamp"
    class="arco-image-img arco-image arco-image-before-load"
    src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
    style="width:200px"
    tabindex="0"
    width="200"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;

exports[`renders Image/demo/caption.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-start"
>
  <div
    class="arco-space-item"
    style="margin-right:60px"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
        style="width:200px"
        tabindex="0"
        title="A user’s avatar"
        width="200"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
        style="width:200px"
        tabindex="0"
        title="A user’s avatar"
        width="200"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/component-preview.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Click me to preview image
    </span>
  </button>
</div>
`;

exports[`renders Image/demo/component-preview-group.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Click me to preview multiple image
    </span>
  </button>
</div>
`;

exports[`renders Image/demo/custom-preview-actions.md correctly 1`] = `
<div>
  <img
    alt="lamp"
    class="arco-image-img arco-image arco-image-before-load"
    src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
    style="width:200px"
    tabindex="0"
    width="200"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;

exports[`renders Image/demo/error.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:20px"
  >
    <div>
      <img
        alt="some-error"
        class="arco-image-img arco-image arco-image-before-load"
        height="300"
        src="some-error.png"
        style="width:400px;height:300px"
        tabindex="0"
        width="400"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div>
      <img
        alt="This is a picture of humans eating ice cream. The humans on the screen are very happy just now. The ice cream is green, it seems to be flavored with matcha. The gender of the human is unknown. It has very long hair and the human hair is brown."
        class="arco-image-img arco-image arco-image-before-load"
        height="300"
        src="some-error.png"
        style="width:400px;height:300px"
        tabindex="0"
        width="400"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/extra-actions.md correctly 1`] = `
<div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-start"
  >
    <div
      class="arco-space-item"
      style="margin-right:20px"
    >
      <div>
        <img
          alt="lamp1"
          class="arco-image-img arco-image arco-image-before-load"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
          style="width:300px"
          tabindex="0"
          title="A user’s avatar"
          width="300"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div>
        <img
          alt="lamp2"
          class="arco-image-img arco-image arco-image-simple arco-image-before-load"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
          style="width:200px;vertical-align:top"
          tabindex="0"
          title="A user’s avatar"
          width="200"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
  </div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-start"
    style="margin-top:67px"
  >
    <div
      class="arco-space-item"
      style="margin-right:20px"
    >
      <div>
        <img
          alt="lamp3"
          class="arco-image-img arco-image arco-image-before-load"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
          style="width:300px"
          tabindex="0"
          title="A user’s avatar"
          width="300"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div>
        <img
          alt="lamp4"
          class="arco-image-img arco-image arco-image-simple arco-image-before-load"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
          style="width:200px;vertical-align:top"
          tabindex="0"
          title="A user’s avatar"
          width="200"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/lazyload.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical image-demo-wrapper"
>
  <div
    class="arco-space-item"
    style="margin-bottom:50px"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        height="150"
        style="width:380px;height:150px"
        tabindex="0"
        width="380"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:50px"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        height="150"
        style="width:380px;height:150px"
        tabindex="0"
        width="380"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:50px"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        height="150"
        style="width:380px;height:150px"
        tabindex="0"
        width="380"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div>
      <img
        alt="lamp"
        class="arco-image-img arco-image arco-image-before-load"
        height="150"
        style="width:380px;height:150px"
        tabindex="0"
        width="380"
      />
      <div
        class="arco-image-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/loader.md correctly 1`] = `
<div>
  <div>
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      style="margin-bottom:20px"
      type="button"
    >
      <span>
        reload
      </span>
    </button>
  </div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-center"
  >
    <div
      class="arco-space-item"
      style="margin-right:20px"
    >
      <div>
        <img
          alt="lamp1"
          class="arco-image-img arco-image arco-image-before-load"
          height="200"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp?timestamp="
          style="width:200px;height:200px"
          tabindex="0"
          width="200"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div>
        <img
          alt="lamp2"
          class="arco-image-img arco-image arco-image-before-load"
          height="200"
          src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp?timestamp="
          style="width:200px;height:200px;margin-left:67px"
          tabindex="0"
          width="200"
        />
        <div
          class="arco-image-overlay"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/preview-get-popup-container.md correctly 1`] = `
<div
  style="width:100%;height:400px;background-color:var(--color-fill-2);position:relative;overflow:hidden;line-height:400px;text-align:center"
>
  <div>
    <img
      alt="lamp"
      class="arco-image-img arco-image arco-image-before-load"
      src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
      style="width:200px"
      tabindex="0"
      width="200"
    />
    <div
      class="arco-image-overlay"
    />
  </div>
</div>
`;

exports[`renders Image/demo/preview-group.md correctly 1`] = `
<div>
  <div
    class="arco-space arco-space-vertical"
  >
    <div
      class="arco-space-item"
    >
      <div
        class="arco-space arco-space-horizontal arco-space-align-center"
      >
        <div
          class="arco-space-item"
          style="margin-right:8px"
        >
          <div>
            <img
              alt="lamp1"
              class="arco-image-img arco-image arco-image-before-load"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
              style="width:200px"
              tabindex="0"
              width="200"
            />
            <div
              class="arco-image-overlay"
            />
          </div>
        </div>
        <div
          class="arco-space-item"
          style="margin-right:8px"
        >
          <div>
            <img
              alt="lamp2"
              class="arco-image-img arco-image arco-image-before-load"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/e278888093bef8910e829486fb45dd69.png~tplv-uwbnlip3yd-webp.webp"
              style="width:200px"
              tabindex="0"
              width="200"
            />
            <div
              class="arco-image-overlay"
            />
          </div>
        </div>
        <div
          class="arco-space-item"
          style="margin-right:8px"
        >
          <div>
            <img
              alt="lamp3"
              class="arco-image-img arco-image arco-image-before-load"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp"
              style="width:200px"
              tabindex="0"
              width="200"
            />
            <div
              class="arco-image-overlay"
            />
          </div>
        </div>
        <div
          class="arco-space-item"
        >
          <div>
            <img
              alt="lamp4"
              class="arco-image-img arco-image arco-image-before-load"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/8361eeb82904210b4f55fab888fe8416.png~tplv-uwbnlip3yd-webp.webp"
              style="width:200px"
              tabindex="0"
              width="200"
            />
            <div
              class="arco-image-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Image/demo/progressive-loader.md correctly 1`] = `
<div>
  <div>
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      style="margin-bottom:20px"
      type="button"
    >
      <span>
        reload
      </span>
    </button>
  </div>
  <div>
    <img
      alt="lamp"
      class="arco-image-img arco-image arco-image-before-load"
      src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp?timestamp="
      style="width:200px"
      tabindex="0"
      width="200"
    />
    <div
      class="arco-image-overlay"
    />
  </div>
</div>
`;
